--- a/views/home.ejs
+++ b/views/home.ejs
@@ -48,7 +48,9 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Welcome to my website! Explore the cool features that I've added to show off my useful skills!</p>
+                <p class="masthead-subheading font-weight-light mb-0">Welcome to my website! Explore the cool features that I've added to show off my useful skills! I made this change
+                    the "firstNewBranch" branch
+                </p>
             </div>
         </header>
         <!-- Portfolio Section-->
