made the home page look right again

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -48,9 +48,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Welcome to my website! Explore the cool features that I've added to show off my useful skills! I made this change
-                    the "firstNewBranch" branch
-                </p>
+                <p class="masthead-subheading font-weight-light mb-0">Welcome to my website! Explore the cool features that I've added to show off my useful skills!</p>
             </div>
         </header>
         <!-- Portfolio Section-->
