--- a/views/azureml.ejs
+++ b/views/azureml.ejs
@@ -79,21 +79,18 @@
                                 <input type="number" id="doors">
                                 <label for="weight">Enter the weight:</label>
                                 <input type="number" id="weight">
-
-
-                                <input type="text" name="firstName" id="firstName"><br><br>
-                               
+                               <button onclick="predictCarPrice()">Click for prediction</button>
+                               <br>
                                 <p id="MLoutput"></p> 
                             </fieldset>
                         </form>
                     </div>
 
-
-
-
-
                     <!--Scripts-->
                     <script>
+                        function predictCarPrice() {
+                            
+                        }
 
                     </script>
 
