made the conf page display drinks route to pg page

--- a/views/confPage.ejs
+++ b/views/confPage.ejs
@@ -17,7 +17,7 @@
     <form action="/" method="get">
         <button type="submit">Home</button>
     </form>
-    <form action="/displayDrinks" method="get">
+    <form action="/postgres" method="get">
         <button type="submit">Display Drinks</button>
     </form>
 
